Depricated OpenCPN parameters removed

--- a/templates/openvpn_client.conf.j2
+++ b/templates/openvpn_client.conf.j2
@@ -10,7 +10,7 @@ persist-key
 persist-tun
 remote-cert-tls server
 cipher AES-256-CBC
-keysize 256
+#keysize 256  # depricated in version 2.4
 auth SHA512
 auth-nocache
 tls-client
