--- a/templates/openvpn-docker-entrypoint.sh.j2
+++ b/templates/openvpn-docker-entrypoint.sh.j2
@@ -1,6 +1,5 @@
 #!/bin/bash
 set -e
-
 if [[ ! -f /etc/openvpn/pki/ca.crt ]]; then
     export EASYRSA_BATCH=1 # see https://superuser.com/questions/1331293/easy-rsa-v3-execute-build-ca-and-gen-req-silently
     cd /opt/app/easy-rsa
@@ -10,26 +9,26 @@ if [[ ! -f /etc/openvpn/pki/ca.crt ]]; then
 
     # Building the CA
     echo 'Setting up public key infrastructure...'
-    ./easyrsa init-pki
+    /usr/share/easy-rsa/easyrsa init-pki
 
     echo 'Generating ertificate authority...'
-    ./easyrsa build-ca nopass
+    /usr/share/easy-rsa/easyrsa build-ca nopass
 
     # Creating the Server Certificate, Key, and Encryption Files
     echo 'Creating the Server Certificate...'
-    ./easyrsa gen-req server nopass
+    /usr/share/easy-rsa/easyrsa gen-req server nopass
 
     echo 'Sign request...'
-    ./easyrsa sign-req server server
+    /usr/share/easy-rsa/easyrsa sign-req server server
 
     echo 'Generate Diffie-Hellman key...'
-    ./easyrsa gen-dh
+    /usr/share/easy-rsa/easyrsa gen-dh
 
     echo 'Generate HMAC signature...'
     openvpn --genkey --secret pki/ta.key
 
     echo 'Create certificate revocation list (CRL)...'
-    ./easyrsa gen-crl
+    /usr/share/easy-rsa/easyrsa gen-crl
     chmod +r ./pki/crl.pem
 
     # Copy to mounted volume
