--- a/templates/openvpn-docker-compose.yml.j2
+++ b/templates/openvpn-docker-compose.yml.j2
@@ -5,7 +5,9 @@ version: "3.5"
 services:
     openvpn:
        container_name: openvpn
-       build: ./openvpn-docker
+       # If you want to build your own image, uncomment the following line and comment the image line
+       #build: ./openvpn-docker
+       image: d3vilh/openvpn-server:latest
        privileged: true
        ports: 
           - "1194:1194/udp"
