fix for ESYRSA vars delivery

--- a/templates/openvpn-docker-entrypoint.sh.j2
+++ b/templates/openvpn-docker-entrypoint.sh.j2
@@ -6,11 +6,11 @@ if [[ ! -f /etc/openvpn/pki/ca.crt ]]; then
     cd /opt/app/easy-rsa
  
     # Copy easy-rsa variables
-    cp /etc/openvpn/config/easy-rsa.vars ./vars
+    cp /etc/openvpn/config/easy-rsa.vars ./pki/vars
 
     # Listing env parameters:
     echo "Following EASYRSA variables will be used:"
-    cat /opt/app/easy-rsa/vars | awk '{$1=""; print $0}';
+    cat /opt/app/easy-rsa/pki/vars | awk '{$1=""; print $0}';
 
     # Building the CA
     echo 'Setting up public key infrastructure...'
@@ -46,7 +46,7 @@ fi
 
 # Listing env parameters:
 echo "Following EASYRSA variables were set during CA init:"
-cat /opt/app/easy-rsa/vars | awk '{$1=""; print $0}';
+cat /opt/app/easy-rsa/pki/vars | awk '{$1=""; print $0}';
 
 # Configure network
 mkdir -p /dev/net
