--- a/templates/openvpn_exporter.yml.j2
+++ b/templates/openvpn_exporter.yml.j2
@@ -4,16 +4,16 @@ version: "3.5"
 
 services:
 
-    openvpn_exporter:
-       container_name: openvpn_exporter
-       image: d3vilh/openvpn_exporter:latest
-       environment:
-           - OVPN_STATUS_FILE=/etc/openvpn/log/openvpn-status.log
-       privileged: true
-       expose:
-           - "9176"
-       ports:
-           - "9176:9176/tcp"
-       volumes:
-           - ../log:/etc/openvpn/log
-       restart: always
+  ovpn_exporter:
+    container_name: ovpn_exporter
+    image: d3vilh/openvpn_exporter:latest
+    restart: always
+    privileged: true
+    environment:
+       - OVPN_STATUS_FILE=/etc/openvpn/log/openvpn-status.log
+    volumes:
+       - ../openvpn-server/log:/etc/openvpn/log
+    ports:
+       - "9176:9176/tcp"
+    networks:
+      - back-tier
