--- a/templates/openvpn-docker-entrypoint.sh.j2
+++ b/templates/openvpn-docker-entrypoint.sh.j2
@@ -1,52 +1,59 @@
 #!/bin/bash
+#VERSION 0.2 by @d3vilh@github.com aka Mr. Philipp
 set -e
 
-if [[ ! -f /etc/openvpn/pki/ca.crt ]]; then
+#Variables
+EASY_RSA=/usr/share/easy-rsa
+OPENVPN_DIR=/etc/openvpn
+echo "EasyRSA path: $EASY_RSA OVPN path: $OPENVPN_DIR"
+
+if [[ ! -f $OPENVPN_DIR/pki/ca.crt ]]; then
     export EASYRSA_BATCH=1 # see https://superuser.com/questions/1331293/easy-rsa-v3-execute-build-ca-and-gen-req-silently
-    cd /opt/app/easy-rsa
+    #cd /opt/app/easy-rsa
+    cd $EASY_RSA
 
     # Building the CA
     echo 'Setting up public key infrastructure...'
-    /usr/share/easy-rsa/easyrsa init-pki
+    $EASY_RSA/easyrsa init-pki
 
     # Copy easy-rsa variables
-    cp /etc/openvpn/config/easy-rsa.vars ./pki/vars
+    cp $OPENVPN_DIR/config/easy-rsa.vars $EASY_RSA/pki/vars
 
     # Listing env parameters:
     echo "Following EASYRSA variables will be used:"
-    cat /opt/app/easy-rsa/pki/vars | awk '{$1=""; print $0}';
+    cat $EASY_RSA/pki/vars | awk '{$1=""; print $0}';
 
     echo 'Generating ertificate authority...'
-    /usr/share/easy-rsa/easyrsa build-ca nopass
+    $EASY_RSA/easyrsa build-ca nopass
 
     # Creating the Server Certificate, Key, and Encryption Files
     echo 'Creating the Server Certificate...'
-    /usr/share/easy-rsa/easyrsa gen-req server nopass
+    $EASY_RSA/easyrsa gen-req server nopass
 
     echo 'Sign request...'
-    /usr/share/easy-rsa/easyrsa sign-req server server
+    $EASY_RSA/easyrsa sign-req server server
 
     echo 'Generate Diffie-Hellman key...'
-    /usr/share/easy-rsa/easyrsa gen-dh
+    $EASY_RSA/easyrsa gen-dh
 
     echo 'Generate HMAC signature...'
-    openvpn --genkey --secret pki/ta.key
+    openvpn --genkey --secret $EASY_RSA/pki/ta.key
 
     echo 'Create certificate revocation list (CRL)...'
-    /usr/share/easy-rsa/easyrsa gen-crl
-    chmod +r ./pki/crl.pem
+    $EASY_RSA/easyrsa gen-crl
+    chmod +r $EASY_RSA/pki/crl.pem
 
     # Copy to mounted volume
-    cp -r ./pki/. /etc/openvpn/pki
+    cp -r $EASY_RSA/pki/. $OPENVPN_DIR/pki
 else
     # Copy from mounted volume
-    cp -r /etc/openvpn/pki /opt/app/easy-rsa
+    # cp -r $OPENVPN_DIR/pki /opt/app/easy-rsa
     echo 'PKI already set up.'
 fi
 
 # Listing env parameters:
 echo "Following EASYRSA variables were set during CA init:"
-cat /opt/app/easy-rsa/pki/vars | awk '{$1=""; print $0}';
+cat $EASY_RSA/pki/vars | awk '{$1=""; print $0}';
 
 # Configure network
 mkdir -p /dev/net
@@ -84,4 +91,4 @@ echo 'IPT FWD Chains:'
 iptables -v -x -n -L | grep DROP 
 
 echo 'Start openvpn process...'
-/usr/sbin/openvpn --cd /etc/openvpn --script-security 2 --config /etc/openvpn/config/server.conf
+/usr/sbin/openvpn --cd $OPENVPN_DIR --script-security 2 --config $OPENVPN_DIR/config/server.conf
