--- a/templates/openvpn_client.conf.j2
+++ b/templates/openvpn_client.conf.j2
@@ -9,8 +9,8 @@ group nogroup
 persist-key
 persist-tun
 remote-cert-tls server
-cipher AES-256-CBC
-#keysize 256  # depricated in version 2.4
+# cipher AES-256-CBC  # Deprecated since v.0.3. we are using GCM now.
+cipher AES-256-GCM
 auth SHA512
 auth-nocache
 tls-client
