--- a/templates/openvpn-docker-compose.yml.j2
+++ b/templates/openvpn-docker-compose.yml.j2
@@ -23,6 +23,7 @@ services:
            - ./staticclients:/etc/openvpn/staticclients
            - ./log:/var/log/openvpn
            - ./fw-rules.sh:/opt/app/fw-rules.sh
+           - ./checkpsw.sh:/opt/app/checkpsw.sh
        cap_add:
            - NET_ADMIN
        restart: always
