moving to hub image

--- a/templates/openvpn-docker-compose.yml.j2
+++ b/templates/openvpn-docker-compose.yml.j2
@@ -6,8 +6,8 @@ services:
     openvpn:
        container_name: openvpn
        # If you want to build your own image, uncomment the following line and comment the image line
-       build: ./openvpn-docker
-       #image: d3vilh/openvpn-server:latest
+       #build: ./openvpn-docker
+       image: d3vilh/openvpn-server:latest
        privileged: true
        ports: 
           - "1194:1194/udp"
