--- a/templates/openvpn-docker-entrypoint.sh.j2
+++ b/templates/openvpn-docker-entrypoint.sh.j2
@@ -51,7 +51,7 @@ fi
 
 # Listing env parameters:
 echo "Following EASYRSA variables were set during CA init:"
-cat $EASY_RSA/pki/vars | awk '{$1=""; print $0}';
+cat $OPENVPN_DIR/pki/vars | awk '{$1=""; print $0}';
 
 # Configure network
 mkdir -p /dev/net
