--- a/templates/openvpn-docker-entrypoint.sh.j2
+++ b/templates/openvpn-docker-entrypoint.sh.j2
@@ -60,7 +60,12 @@ if [ ! -c /dev/net/tun ]; then
 fi
 
 echo 'Configuring networking rules...'
-echo 'net.ipv4.ip_forward=1' >> /etc/sysctl.conf
+if ! grep -q 'net.ipv4.ip_forward=1' /etc/sysctl.conf; then
+  echo 'net.ipv4.ip_forward=1' >> /etc/sysctl.conf; 
+  echo 'IP forwarding configuration now applied:'
+else
+  echo 'IP forwarding configuration already applied:'
+fi
 sysctl -p /etc/sysctl.conf
 
 echo 'Configuring iptables...'
